Pushing the docs for revision for branch: development, commit dd8bb57ba5b32f12ef081c7997dba826be9f80f5, folder: dev

--- a/dev/psmac.html
+++ b/dev/psmac.html
@@ -260,7 +260,7 @@ such that all <em>SMAC</em> are better informed and can work together.</p>
 <p class="first admonition-title">Note</p>
 <p class="last">To use <em>pSMAC</em>, please note that it communicates via the file space,
 i.e., all <em>pSMAC</em> runs write from time to time its runhistory (all target algorithm evaluations)
-to disk and read the runhistories of all <em>pSMAC</em> runs.
+to disk and read the runhistories of all other <em>pSMAC</em> runs.
 So, a requirement for <em>pSMAC</em> is that it can write to a shared file space.</p>
 </div>
 <div class="section" id="commandline">
