--- a/dev/_modules/smac/optimizer/smbo.html
+++ b/dev/_modules/smac/optimizer/smbo.html
@@ -497,7 +497,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">acquisition_func</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">model</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">model</span><span class="p">,</span> <span class="n">eta</span><span class="o">=</span><span class="n">incumbent_value</span><span class="p">)</span>
 
         <span class="n">challengers</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">acq_optimizer</span><span class="o">.</span><span class="n">maximize</span><span class="p">(</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">runhistory</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">stats</span><span class="p">,</span> <span class="mi">5000</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">random_configuration_chooser</span>
+            <span class="n">runhistory</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">runhistory</span><span class="p">,</span> 
+            <span class="n">stats</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">stats</span><span class="p">,</span> 
+            <span class="n">num_points</span><span class="o">=</span><span class="mi">5000</span><span class="p">,</span> 
+            <span class="n">random_configuration_chooser</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">random_configuration_chooser</span>
         <span class="p">)</span>
         <span class="k">return</span> <span class="n">challengers</span></div>
 
