Pushing the docs for revision for branch: development, commit 2c259a0f3f67e43ee1674efb8c85d5ac8cec6e71, folder: dev

--- a/dev/_modules/smac/scenario/scenario.html
+++ b/dev/_modules/smac/scenario/scenario.html
@@ -307,11 +307,11 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">output_dir_for_this_run</span> <span class="o">=</span> <span class="kc">None</span>
 
-        <span class="k">if</span> <span class="nb">type</span><span class="p">(</span><span class="n">scenario</span><span class="p">)</span> <span class="ow">is</span> <span class="nb">str</span><span class="p">:</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">scenario</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
             <span class="n">scenario_fn</span> <span class="o">=</span> <span class="n">scenario</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;Reading scenario file: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">scenario_fn</span><span class="p">))</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;Reading scenario file: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">scenario_fn</span><span class="p">)</span>
             <span class="n">scenario</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">in_reader</span><span class="o">.</span><span class="n">read_scenario_file</span><span class="p">(</span><span class="n">scenario_fn</span><span class="p">)</span>
-        <span class="k">elif</span> <span class="nb">type</span><span class="p">(</span><span class="n">scenario</span><span class="p">)</span> <span class="ow">is</span> <span class="nb">dict</span><span class="p">:</span>
+        <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">scenario</span><span class="p">,</span> <span class="nb">dict</span><span class="p">):</span>
             <span class="n">scenario</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">copy</span><span class="p">(</span><span class="n">scenario</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span>
@@ -334,11 +334,11 @@
             <span class="n">arg_name</span><span class="p">,</span> <span class="n">arg_value</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parse_argument</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">scenario</span><span class="p">,</span> <span class="o">**</span><span class="n">value</span><span class="p">)</span>
             <span class="n">parsed_arguments</span><span class="p">[</span><span class="n">arg_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">arg_value</span>
 
-        <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">scenario</span><span class="p">)</span> <span class="o">!=</span> <span class="mi">0</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">scenario</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;Could not parse the following arguments: </span><span class="si">%s</span><span class="s1">&#39;</span> <span class="o">%</span>
                              <span class="nb">str</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">scenario</span><span class="o">.</span><span class="n">keys</span><span class="p">())))</span>
 
-        <span class="k">for</span> <span class="n">group</span><span class="p">,</span> <span class="n">potential_members</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_groups</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">potential_members</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_groups</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="n">n_members_in_scenario</span> <span class="o">=</span> <span class="mi">0</span>
             <span class="k">for</span> <span class="n">pm</span> <span class="ow">in</span> <span class="n">potential_members</span><span class="p">:</span>
                 <span class="k">if</span> <span class="n">pm</span> <span class="ow">in</span> <span class="n">parsed_arguments</span><span class="p">:</span>
@@ -356,8 +356,8 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Scenario Options:&quot;</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">arg_name</span><span class="p">,</span> <span class="n">arg_value</span> <span class="ow">in</span> <span class="n">parsed_arguments</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">arg_value</span><span class="p">,(</span><span class="nb">int</span><span class="p">,</span><span class="nb">str</span><span class="p">,</span><span class="nb">float</span><span class="p">)):</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">%s</span><span class="s2"> = </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span><span class="p">(</span><span class="n">arg_name</span><span class="p">,</span><span class="n">arg_value</span><span class="p">))</span>
+            <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">arg_value</span><span class="p">,</span> <span class="p">(</span><span class="nb">int</span><span class="p">,</span> <span class="nb">str</span><span class="p">,</span> <span class="nb">float</span><span class="p">)):</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">%s</span><span class="s2"> = </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">arg_name</span><span class="p">,</span> <span class="n">arg_value</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Scenario.add_argument"><a class="viewcode-back" href="../../../apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.add_argument">[docs]</a>    <span class="k">def</span> <span class="nf">add_argument</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">help</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">callback</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                      <span class="n">dest</span><span class="p">:</span> <span class="nb">str</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">required</span><span class="p">:</span> <span class="nb">bool</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
@@ -493,8 +493,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;execdir&#39;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="s1">&#39;.&#39;</span><span class="p">,</span>
                           <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Specifies the path to the execution-directory.&quot;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;deterministic&#39;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                          <span class="n">help</span><span class="o">=</span><span class="s2">&quot;If true, the optimization process will be &quot;</span>
-                               <span class="s2">&quot;repeatable.&quot;</span><span class="p">,</span> <span class="n">callback</span><span class="o">=</span><span class="n">_is_truthy</span><span class="p">)</span>
+                          <span class="n">help</span><span class="o">=</span><span class="s2">&quot;If true, the target algorithm is expected to be deterministic.&quot;</span><span class="p">,</span>
+                          <span class="n">callback</span><span class="o">=</span><span class="n">_is_truthy</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;intensification_percentage&#39;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="mf">0.5</span><span class="p">,</span>
                           <span class="n">help</span><span class="o">=</span><span class="s2">&quot;The fraction of time to be used on &quot;</span>
                                <span class="s2">&quot;intensification (versus choice of next &quot;</span>
@@ -590,7 +590,7 @@
         <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">overall_obj</span><span class="p">[:</span><span class="mi">4</span><span class="p">]</span> <span class="ow">in</span> <span class="p">[</span><span class="s2">&quot;mean&quot;</span><span class="p">,</span> <span class="s2">&quot;MEAN&quot;</span><span class="p">]:</span>
             <span class="n">par_str</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">overall_obj</span><span class="p">[</span><span class="mi">4</span><span class="p">:]</span>
         <span class="c1"># Check for par-value as in &quot;par10&quot;/ &quot;mean5&quot;</span>
-        <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">par_str</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">par_str</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">par_factor</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">par_str</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;No par-factor detected. Using 1 by default.&quot;</span><span class="p">)</span>
@@ -603,7 +603,7 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">train_inst_fn</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span>
-                    <span class="s2">&quot;Have not found instance file: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">train_inst_fn</span><span class="p">))</span>
+                    <span class="s2">&quot;Have not found instance file: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">train_inst_fn</span><span class="p">)</span>
                 <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">test_inst_fn</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">isfile</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">test_inst_fn</span><span class="p">):</span>
@@ -611,8 +611,7 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">test_inst_fn</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span>
-                    <span class="s2">&quot;Have not found test instance file: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span>
-                        <span class="bp">self</span><span class="o">.</span><span class="n">test_inst_fn</span><span class="p">))</span>
+                    <span class="s2">&quot;Could not find test instance file: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">test_inst_fn</span><span class="p">)</span>
                 <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">instance_specific</span> <span class="o">=</span> <span class="p">{}</span>
@@ -657,8 +656,7 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">cs</span> <span class="o">=</span> <span class="n">pcs_new</span><span class="o">.</span><span class="n">read</span><span class="p">(</span><span class="n">pcs_str</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">cs</span><span class="o">.</span><span class="n">seed</span><span class="p">(</span><span class="mi">42</span><span class="p">)</span>
         <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">pcs_fn</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s2">&quot;Have not found pcs file: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span>
-                              <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">pcs_fn</span><span class="p">))</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s2">&quot;Could not find pcs file: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">pcs_fn</span><span class="p">)</span>
             <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
 
         <span class="c1"># you cannot set output dir to None directly</span>
@@ -667,7 +665,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">output_dir</span> <span class="o">=</span> <span class="kc">None</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Deactivate output directory.&quot;</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;Output to </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">output_dir</span><span class="p">))</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;Output to </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_dir</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">shared_model</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_psmac_dirs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="c1"># per default, we assume that</span>
@@ -694,7 +692,7 @@
                 <span class="k">except</span> <span class="ne">ValueError</span><span class="p">:</span>
                     <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Failed to cast all instances to str&quot;</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">warn_</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s2">&quot;All instances were casted to str.&quot;</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s2">&quot;All instances were casted to str.&quot;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">l</span>
 
 <div class="viewcode-block" id="Scenario.write"><a class="viewcode-back" href="../../../apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.write">[docs]</a>    <span class="k">def</span> <span class="nf">write</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
