--- a/dev/options.html
+++ b/dev/options.html
@@ -297,7 +297,7 @@ generated within custom code, you might not need <em>algo</em> or <em>paramfile<
 </tr>
 <tr class="field-odd field"><th class="field-name">cutoff_time:</th><td class="field-body">Maximum runtime, after which the target algorithm is cancelled. <strong>Required if *run_obj* is runtime.</strong></td>
 </tr>
-<tr class="field-even field"><th class="field-name">deterministic:</th><td class="field-body">If true, the optimization process will be repeatable.</td>
+<tr class="field-even field"><th class="field-name">deterministic:</th><td class="field-body">If true, the target algorithm is expected to be deterministic.</td>
 </tr>
 <tr class="field-odd field"><th class="field-name">execdir:</th><td class="field-body">Specifies the path to the execution-directory. Default: ..</td>
 </tr>
@@ -320,7 +320,7 @@ generated within custom code, you might not need <em>algo</em> or <em>paramfile<
 </tr>
 <tr class="field-odd field"><th class="field-name">minR:</th><td class="field-body">Minimum number of calls per configuration. Default: 1.</td>
 </tr>
-<tr class="field-even field"><th class="field-name">output_dir:</th><td class="field-body">Specifies the output-directory for all emerging files, such as logging and results. Default: smac3-output_2018-04-27_08:36:30_204895.</td>
+<tr class="field-even field"><th class="field-name">output_dir:</th><td class="field-body">Specifies the output-directory for all emerging files, such as logging and results. Default: smac3-output_2018-04-27_11:26:30_874073.</td>
 </tr>
 <tr class="field-odd field"><th class="field-name">overall_obj:</th><td class="field-body">PARX, where X is an integer defining the penalty imposed on timeouts (i.e. runtimes that exceed the <em>cutoff-time</em>). Default: par10.</td>
 </tr>
