Pushing the docs for revision for branch: development, commit a83dcd7169ea5141ca20cc47e25a38a423e2820d, folder: dev

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -884,6 +884,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.save">save() (smac.stats.stats.Stats method)</a>
 </li>
+      <li><a href="apidoc/smac.utils.io.output_writer.html#smac.utils.io.output_writer.OutputWriter.save_configspace">save_configspace() (smac.utils.io.output_writer.OutputWriter method)</a>
+</li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.save_json">save_json() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
       <li><a href="apidoc/smac.epm.base_epm.html#smac.epm.base_epm.AbstractEPM.scaler">scaler (smac.epm.base_epm.AbstractEPM attribute)</a>
@@ -1233,8 +1235,6 @@
       <li><a href="apidoc/smac.utils.io.output_writer.html#smac.utils.io.output_writer.OutputWriter.write_inst_file">write_inst_file() (smac.utils.io.output_writer.OutputWriter method)</a>
 </li>
       <li><a href="apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.write_options_to_doc">write_options_to_doc() (smac.scenario.scenario.Scenario method)</a>
-</li>
-      <li><a href="apidoc/smac.utils.io.output_writer.html#smac.utils.io.output_writer.OutputWriter.write_pcs_file">write_pcs_file() (smac.utils.io.output_writer.OutputWriter method)</a>
 </li>
       <li><a href="apidoc/smac.utils.io.output_writer.html#smac.utils.io.output_writer.OutputWriter.write_scenario_file">write_scenario_file() (smac.utils.io.output_writer.OutputWriter method)</a>
 </li>
